@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2971 2004/05/21 21:29:52 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2972 2004/05/22 04:19:39 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,13 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2004-05-22 18:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
+  * xharbour/sourc/rtl/gtwvt/gtwvt.c
+  * xharbour/sourc/rtl/gtwvt/wvtcore.c
+  * xharbour/sourc/rtl/gtwvt/wvtutils.c 
+  * xharbour/include/hbgtwvt.h
+    Few functions additions mostly for GDI pimitives and few optimizations. 
+   
 2004-05-22 01:20 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
   * contrib/hbzlib/zip.c
     ! minor fix to hb_zipfile() Problem reported by Jose Quintas
